# operation

./: README.md  configure.ac  main.c  operation.c  t.c
exemple/: .main.c.swp  .operation.c.swp  Makefile  README  a.out  main  main.bak.c  main.c  main.c.bak  math.patch  operation.c  operation.h  t.c  test
src/: Makefile.am  operation.c  operation.h
